--- a/Find_epoch.ipynb
+++ b/Find_epoch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ca9792ac",
    "metadata": {},
    "outputs": [],
@@ -16,101 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b73e39f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "================================================================================\n",
-      "PIPR\n",
-      "================================================================================\n",
-      "\n",
-      "最优epoch: 43\n",
-      "--------------------------------------------------\n",
-      "综合评分: 0.8925\n",
-      "\n",
-      "平均准确率: 89.57 (±8.70)\n",
-      "平均精确率: 92.41 (±11.68)\n",
-      "平均召回率: 88.20 (±11.80)\n",
-      "平均F1分数: 89.45 (±8.49)\n",
-      "平均ROC AUC: 89.57 (±8.71)\n",
-      "平均PR AUC: 87.19 (±10.94)\n",
-      "\n",
-      "平均验证损失: 0.2345\n",
-      "\n",
-      "收敛分析:\n",
-      "--------------------------------------------------\n",
-      " fold  final_f1  stable_epoch  converged_early\n",
-      "    1    0.9559            28             True\n",
-      "    2    0.9608            35             True\n",
-      "    3    0.9449            31             True\n",
-      "    4    0.9552            26             True\n",
-      "    5    0.6681            44            False\n",
-      "\n",
-      "前5个最佳epoch:\n",
-      "--------------------------------------------------\n",
-      " epoch  composite_score  f1_mean  f1_std\n",
-      "    43          0.89252   0.8945  0.0849\n",
-      "    35          0.88457   0.8983  0.1068\n",
-      "    49          0.88097   0.8996  0.1225\n",
-      "    46          0.87830   0.8985  0.1257\n",
-      "    44          0.87496   0.8999  0.1297\n",
-      "\n",
-      "建议:\n",
-      "--------------------------------------------------\n",
-      "建议选择epoch 43 - 模型在稳定期达到最佳性能\n",
-      "模型表现有一定波动，建议检查数据分布一致性\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "TF-PPI\n",
-      "================================================================================\n",
-      "\n",
-      "最优epoch: 38\n",
-      "--------------------------------------------------\n",
-      "综合评分: 0.9064\n",
-      "\n",
-      "平均准确率: 90.61 (±1.52)\n",
-      "平均精确率: 90.71 (±3.08)\n",
-      "平均召回率: 90.66 (±3.90)\n",
-      "平均F1分数: 90.60 (±1.60)\n",
-      "平均ROC AUC: 90.62 (±1.52)\n",
-      "平均PR AUC: 86.85 (±2.21)\n",
-      "\n",
-      "平均验证损失: 0.2468\n",
-      "\n",
-      "收敛分析:\n",
-      "--------------------------------------------------\n",
-      " fold  final_f1  stable_epoch  converged_early\n",
-      "    1    0.9309            50            False\n",
-      "    2    0.8769            30             True\n",
-      "    3    0.9369            50            False\n",
-      "    4    0.8945            35             True\n",
-      "    5    0.8606            50            False\n",
-      "\n",
-      "前5个最佳epoch:\n",
-      "--------------------------------------------------\n",
-      " epoch  composite_score  f1_mean  f1_std\n",
-      "    38          0.90636   0.9060  0.0160\n",
-      "    48          0.90298   0.9052  0.0388\n",
-      "    41          0.90042   0.9020  0.0420\n",
-      "    50          0.89733   0.9000  0.0333\n",
-      "    49          0.88041   0.8804  0.0591\n",
-      "\n",
-      "建议:\n",
-      "--------------------------------------------------\n",
-      "建议选择epoch 38 - 模型在稳定期达到最佳性能\n",
-      "模型表现有一定波动，建议检查数据分布一致性\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "spe = \"yeast1\"\n",
+    "spe = \"yeast1-42\"\n",
     "models = [\"DeepFE-PPI\", \"DeepTrio\", \"PIPR\", \"TF-PPI\"]\n",
     "# model2epoch = {\"TF-PPI\" : 50}\n",
     "model2epoch = {}\n",
@@ -145,20 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9733fadd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model\tAccuracy\tPrecision\tRecall\tF1\tROC AUC\tPR AUC\tComposite Score\n",
-      "PIPR\t89.57±8.70\t92.41±11.68\t88.20±11.80\t89.45±8.49\t89.57±8.71\t87.19±10.94\t0.8925\n",
-      "TF-PPI\t90.61±1.52\t90.71±3.08\t90.66±3.90\t90.60±1.60\t90.62±1.52\t86.85±2.21\t0.9064\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Model\\tAccuracy\\tPrecision\\tRecall\\tF1\\tROC AUC\\tPR AUC\\tComposite Score\")\n",
     "for model, optimal_epoch in optimal_epochs.items():\n",
