--- a/MyPPI.ipynb
+++ b/MyPPI.ipynb
@@ -35,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spe = \"rice\"\n",
+    "spe = \"yeast1\"\n",
     "\n",
-    "batch_size = 128\n",
+    "batch_size = 32\n",
     "lr = 0.001\n",
     "set_seed(1234)\n",
     "\n",
@@ -52,7 +52,7 @@
     "from google.colab import drive\n",
     "drive.mount('/content/drive')\n",
     "data_dir = \"drive/MyDrive/ppi-data\"\n",
-    "kfold_dir = \"kfold_1234\"\n",
+    "kfold_dir = \"kfold-42\"\n",
     "epochs = 50\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
